removed whitespace and fixed resize formula

--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -1,16 +1,16 @@
-@import 'helpers/mixins-flexbox';
 @import 'helpers/mixins-media-queries';
+@import 'helpers/mixins-flexbox';
 @import 'helpers/variables';
 
 /*
-  There is a way to dynamically change the font-size depending on the screen size without the need of media queries with the following formula:
-  
-  font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
+There is a way to dynamically change the font-size depending on the screen size without the need of media queries with the following formula:
 
-  Examnple:
-    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));
 
-  More details here: https://css-tricks.com/snippets/css/fluid-typography/
+Examnple:
+font-size:calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
+
+More details here: https://css-tricks.com/snippets/css/fluid-typography/
 */
 
 html,
